--- a/front-end/src/components/ProductPage/productPage.css
+++ b/front-end/src/components/ProductPage/productPage.css
@@ -7,12 +7,13 @@
 .product-page {
     max-width: 1200px;
     width: 100%;
-    margin: 80px auto;
+    margin: 50px auto;
     box-shadow: 0 0 5px #ccc;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
     padding: 30px 0;
+    justify-content: space-between;
 }
 
 .images .main-image{
@@ -105,6 +106,17 @@
 
 .box .description {
     justify-content: left;
+}
+
+.go-to-cart {
+    background-color: #333;
+    color: white;
+    border: none;
+    cursor: pointer;
+    padding: 10px 25px;
+    margin-bottom: 15px;
+    align-self: flex-end;
+    
 }
 
 @media (max-width: 500px) {
