item Summary showing

--- a/front-end/src/components/ProductPage/productPage.css
+++ b/front-end/src/components/ProductPage/productPage.css
@@ -119,6 +119,10 @@
     
 }
 
+.cart-button:active {
+    background-color: red;
+}
+
 @media (max-width: 500px) {
     .gallery-image {
         height: 50px;
