--- a/front-end/src/components/ProductPage/productPage.css
+++ b/front-end/src/components/ProductPage/productPage.css
@@ -102,6 +102,8 @@
     cursor: pointer;
     padding: 10px 25px;
     margin-top: 15px;
+    /* box-shadow: 0 5px #999; */
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .box .description {
@@ -111,16 +113,23 @@
 .go-to-cart {
     background-color: #333;
     color: white;
+    text-decoration: none;
     border: none;
     cursor: pointer;
     padding: 10px 25px;
     margin-bottom: 15px;
     align-self: flex-end;
-    
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      
 }
 
-.cart-button:active {
-    background-color: red;
+.cart-btn:hover, .go-to-cart:hover {
+    background-color: lightseagreen;
+}
+.cart-btn:active, .go-to-cart:active {
+    box-shadow: none;
+    transform: translateY(4px);
+    background-color: lightseagreen;
 }
 
 @media (max-width: 500px) {
