--- a/front-end/src/components/CheckoutPage/checkoutPage.css
+++ b/front-end/src/components/CheckoutPage/checkoutPage.css
@@ -31,6 +31,11 @@
     margin-left: 15px;
 }
 
+.colour {
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+}
 
 .countHandler input {
     width: 40px;
