--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -3,17 +3,7 @@
     margin: 0 auto;
 }
 
-.logo {
-    height: 6em;
-    padding: 1.5em;
-    will-change: filter;
-    transition: filter 300ms;
-}
-
-.logo:hover {
-    filter: drop-shadow(0 0 2em #646cffaa);
-}
-
-.logo.react:hover {
-    filter: drop-shadow(0 0 2em #61dafbaa);
+body {
+    padding-top:55px;
+    padding-bottom: 50px;
 }
