--- a/front-end/src/components/CheckoutPage/checkoutPage.css
+++ b/front-end/src/components/CheckoutPage/checkoutPage.css
@@ -10,13 +10,14 @@
 }
 
 .cartItem {
-    width: 800px;
+    max-width:800px;
+    width: 100%;
     height: 280px;
     display: flex;
     align-items: center;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
-    margin: 40px;
+    margin: 10px auto;
 }
 
 .cartItem img {
