--- a/front-end/src/components/CheckoutPage/checkoutPage.css
+++ b/front-end/src/components/CheckoutPage/checkoutPage.css
@@ -10,32 +10,40 @@
 }
 
 .cartItem {
-    max-width:800px;
+    max-width:1000px;
     width: 100%;
-    height: 280px;
+    height: 220px;
     display: flex;
     align-items: center;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     margin: 10px auto;
+   
 }
 
 .cartItem img {
     width: 200px;
     margin-left: 25px;
-    border-radius: 10px;
+    border-radius: 8px;
 }
 
 .cartItem .description {
     width: 100%;
     font-size: 15px;
-    margin-left: 15px;
+    margin: 0 15px;
+    
 }
 
 .colour {
-    height: 30px;
+    height: 20px;
     width: 30px;
-    border-radius: 50%;
+    border-radius: 20%;
+}
+
+.cartItem .btn {
+    height: 27px;
+    padding: 5px;
+    text-align: center;
 }
 
 .countHandler input {
@@ -63,4 +71,18 @@
 .checkout H3 {
     text-align: center;
     margin-bottom: 20px;
+}
+
+.cartItem a{
+  
+    /* color: inherit; */
+    text-decoration: none;
+    color: black!important;
+        
+}
+
+.cartItem a:hover {
+    color: lightseagreen!important;
+    text-decoration: none;
+    cursor: pointer;
 }
