--- a/front-end/src/components/CheckoutPage/checkoutPage.css
+++ b/front-end/src/components/CheckoutPage/checkoutPage.css
@@ -10,40 +10,32 @@
 }
 
 .cartItem {
-    max-width:1000px;
+    max-width:800px;
     width: 100%;
-    height: 220px;
+    height: 280px;
     display: flex;
     align-items: center;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     margin: 10px auto;
-   
 }
 
 .cartItem img {
     width: 200px;
     margin-left: 25px;
-    border-radius: 8px;
+    border-radius: 10px;
 }
 
 .cartItem .description {
     width: 100%;
     font-size: 15px;
-    margin: 0 15px;
-    
+    margin-left: 15px;
 }
 
 .colour {
-    height: 20px;
+    height: 30px;
     width: 30px;
-    border-radius: 20%;
-}
-
-.cartItem .btn {
-    height: 27px;
-    padding: 5px;
-    text-align: center;
+    border-radius: 50%;
 }
 
 .countHandler input {
@@ -71,18 +63,4 @@
 .checkout H3 {
     text-align: center;
     margin-bottom: 20px;
-}
-
-.cartItem a{
-  
-    /* color: inherit; */
-    text-decoration: none;
-    color: black!important;
-        
-}
-
-.cartItem a:hover {
-    color: lightseagreen!important;
-    text-decoration: none;
-    cursor: pointer;
 }
