--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,9 +1,17 @@
 #root {
-    max-width: 1280px;
-    margin: 0 auto;
+  //max-width: 1280px;
+  margin: 0;
+  padding: 10px 20rem;
+}
+
+@media (max-width: 500px) {
+    #root {
+        margin 0;
+        padding: 2px;
+    }
 }
 
 body {
-    padding-top:55px;
-    padding-bottom: 50px;
+  padding-top: 55px;
+  padding-bottom: 50px;
 }
