--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,14 +1,6 @@
 #root {
-  //max-width: 1280px;
-  margin: 0;
-  padding: 10px 20rem;
-}
-
-@media (max-width: 500px) {
-    #root {
-        margin 0;
-        padding: 2px;
-    }
+  max-width: 1280px;
+  margin: 0 auto;
 }
 
 body {
